--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@kyvg/vue3-notification": "^2.3.3",
+    "axios": "^0.21.1",
     "vue": "^3.0.0",
+    "vue-axios": "^3.2.5",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.2"
   },
