--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-        "dev": "nodemon"
+        "server": "nodemon"
     },
     "repository": {
         "type": "git",
