--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
-    "vue-cli-plugin-tailwind": "~2.0.6"
+    "vue-cli-plugin-tailwind": "~2.0.6",
+    "vue-cli-plugin-vuetify": "~2.4.2"
   },
   "browserslist": [
     "> 1%",
