--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "devfront": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "devfront": "vue-cli-service serve"
   },
   "dependencies": {
     "@headlessui/vue": "^1.4.0",
@@ -20,9 +20,13 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.2.0",
+    "@ky-is/vue-cli-plugin-tailwind": "~2.0.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "postcss-preset-env": "^6.6.0",
+    "tailwindcss": "^1.0.1",
     "vue-cli-plugin-tailwind": "~2.0.6",
     "vue-cli-plugin-vuetify": "~2.4.2"
   },
