--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "autoprefixer": "^9",
     "axios": "^0.21.1",
     "postcss": "^7",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.5",
