--- a/server/package.json
+++ b/server/package.json
@@ -18,10 +18,14 @@
     },
     "homepage": "https://github.com/kanatchikov/ic#readme",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "csv": "^5.5.0",
         "express": "^4.17.1",
+        "express-validator": "^6.12.1",
+        "jsonwebtoken": "^8.5.1",
         "mongodb": "^4.0.0",
+        "mongoose": "^6.0.5",
         "nodemon": "^2.0.12",
         "txt-file-to-json": "^3.0.6"
     }
