--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "babel-jest": "^27.0.6",
     "cypress": "^8.3.0",
     "jest": "^27.0.5",
+    "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0"
