--- a/Server/package.json
+++ b/Server/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/GrachBiceps/FABRICA-CMS.git"
-  },
-  "keywords": [
-    "server"
-  ],
-  "author": "Grach Akobyan",
-  "license": "CC-BY-NC-SA-4.0",
-  "dependencies": {
-    "cross-env": "^7.0.3",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
+    "name": "ic",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "server": "nodemon"
+    },
+    "repository": {
+        "type": "git",
+        "url": ""
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "homepage": "",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "csv": "^5.5.0",
+        "express": "^4.17.1",
+        "express-validator": "^6.12.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongodb": "^4.0.0",
+        "mongoose": "^6.0.5",
+        "nodemon": "^2.0.12",
+        "txt-file-to-json": "^3.0.6"
+    }
 }
