--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "vue-cli-plugin-pug": "~2.0.0"
   }
 }
