--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "babel-jest": "^27.0.6",
+    "dotenv": "^16.0.0",
     "cypress": "^8.3.0",
     "jest": "^27.0.5",
     "pug": "^3.0.2",
